force-app/main/default/objects/tc9_pr__Pay_Transaction__c/tc9_pr__Pay_Transaction__c.object-meta.xml
<CustomObject>
    <label>Pay Transaction</label>
    <nameField>
        <label>Pay Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pay Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>