force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_3bint__Shift__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Shift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shift</label>
    <referenceTo>b3s__Shift__c</referenceTo>
    <relationshipLabel>Pay Transactions</relationshipLabel>
    <relationshipName>Pay_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>