force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_edc__Is_Test_Record__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Is_Test_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Test Record</label>
    <type>Checkbox</type>
</CustomField>