force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Data_Loaded_Transaction__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Data_Loaded_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When a transaction is loaded via external means (ie data loader) this checkbox should be set to TRUE so it is identified as an external transaction.</description>
    <inlineHelpText>When a transaction is loaded via external means (ie data loader) this checkbox should be set to TRUE so it is identified as an external transaction.</inlineHelpText>
    <label>Data Loaded Transaction</label>
    <type>Checkbox</type>
</CustomField>