force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Date_Invoice_Generated__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Date_Invoice_Generated__c</fullName>
    <description>The date/time that the Pay Transaction was processed into an Invoice</description>
    <inlineHelpText>The date/time that the Pay Transaction was processed into an Invoice</inlineHelpText>
    <label>Date Invoice Generated</label>
    <type>DateTime</type>
</CustomField>