force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Expense__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Expense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Expense that applies to the Pay Transaction (if applicable)</description>
    <inlineHelpText>Defines the Expense that applies to the Pay Transaction (if applicable)</inlineHelpText>
    <label>Expense</label>
    <referenceTo>tc9_et__Expense__c</referenceTo>
    <relationshipLabel>Pay Transactions</relationshipLabel>
    <relationshipName>Pay_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>