force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Expense_Claim_Manager__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Expense_Claim_Manager__c</fullName>
    <description>Button to open the Expense Claim Manager</description>
    <formula>if( 
not(isblank(tc9_et__Expense_Claim__c)), tc9_et__Expense_Claim__r.tc9_et__Expense_Claim_Manager__c, &quot;&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Button to open the Expense Claim Manager</inlineHelpText>
    <label>Expense Claim Manager</label>
    <type>Text</type>
</CustomField>