force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Fee_Type__c</fullName>
    <description>Identifies the Type of Invoiceable Fee the Pay Transaction is for. Derived from the related Invoiceable Fee.</description>
    <inlineHelpText>Identifies the Type of Invoiceable Fee the Pay Transaction is for. Derived from the related Invoiceable Fee.</inlineHelpText>
    <label>Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Fee_Type_Picklists</valueSetName>
    </valueSet>
</CustomField>