force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Interpretation_Category__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Interpretation_Category__c</fullName>
    <description>Defines the Interpretation Category of the Pay Transaction. For example, Loading</description>
    <label>Interpretation Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Interpretation_Categories</valueSetName>
    </valueSet>
</CustomField>