force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Interpretation_Tracking_ID__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Interpretation_Tracking_ID__c</fullName>
    <description>A unique ID used in the interpretation of Pay Transactions. This field is automatically populated by the transaction creation process</description>
    <inlineHelpText>A unique ID used in the interpretation of Pay Transactions. This field is automatically populated by the transaction creation process</inlineHelpText>
    <label>Interpretation Tracking ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>