force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Invoice_Calendar_Period__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Calendar_Period__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the Invoice Calendar Period that applies to the Pay Transaction</description>
    <inlineHelpText>Defines the Invoice Calendar Period that applies to the Pay Transaction</inlineHelpText>
    <label>Invoice Calendar Period</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Invoice Calendar Period defined on the Pay Transaction does not have a Calendar with Record Type of Invoice Calendar. Please review.</errorMessage>
        <filterItems>
            <field>tc9_pr__Calendar_Period__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Invoice</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Calendar_Period__c</referenceTo>
    <relationshipLabel>Pay Transactions with Invoice Calendar Period</relationshipLabel>
    <relationshipName>Pay_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>