force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Invoice_PDF__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_PDF__c</fullName>
    <description>If Invoiced, to be used to preview the PDF version of the related Invoice</description>
    <formula>If (not(isblank( tc9_et__Invoice_Item__c )), tc9_et__Invoice_Item__r.tc9_et__Invoice_PDF__c,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Invoiced, to be used to preview the PDF version of the related Invoice</inlineHelpText>
    <label>Invoice PDF</label>
    <type>Text</type>
</CustomField>