force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Invoice_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Tax_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Invoice Tax ID that applies to the Pay Transaction</description>
    <inlineHelpText>Defines the Invoice Tax ID that applies to the Pay Transaction</inlineHelpText>
    <label>Invoice Tax ID</label>
    <referenceTo>tc9_et__Invoice_Tax_ID__c</referenceTo>
    <relationshipLabel>Pay Transactions</relationshipLabel>
    <relationshipName>Pay_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>