force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Invoice_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Tax_Rate__c</fullName>
    <description>The Tax Rate assigned to the related Invoice Tax ID at the time of the Pay Transaction creation. This Rate will be used for  invoicing Pay Transactions.</description>
    <inlineHelpText>The Tax Rate assigned to the related Invoice Tax ID at the time of the Pay Transaction creation. This Rate will be used for  invoicing Pay Transactions.</inlineHelpText>
    <label>Invoice Tax Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>