force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Invoice_Taxable__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Taxable__c</fullName>
    <description>Indicates the Pay Transaction should have tax applied to the invoice..</description>
    <label>Invoice Taxable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>