force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Invoice_Total_Ex_Tax__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Total_Ex_Tax__c</fullName>
    <description>The invoice total (exclusive of invoice tax) that will be applied to invoices for the Pay Transaction</description>
    <formula>tc9_et__Invoice_Rate__c *  tc9_pr__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The invoice total (exclusive of invoice tax) that will be applied to invoices for the Pay Transaction</inlineHelpText>
    <label>Invoice Total Ex. Tax</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>