force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Invoice_Total_Tax__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Total_Tax__c</fullName>
    <description>The total invoice tax that will be applied to invoices for the Pay Transaction</description>
    <formula>if( TEXT(tc9_et__Invoice_Taxable__c) = &apos;No&apos;, 0, tc9_et__Invoice_Tax_Rate__c * tc9_et__Invoice_Total_Ex_Tax__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total invoice tax that will be applied to invoices for the Pay Transaction</inlineHelpText>
    <label>Invoice Total Tax</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>