force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Manual_Entry__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Manual_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When a transaction is created manually this checkbox should be set to TRUE so it is identified as a manual transaction.</description>
    <inlineHelpText>When a transaction is created manually this checkbox should be set to TRUE so it is identified as a manual transaction.</inlineHelpText>
    <label>Manual Entry?</label>
    <type>Checkbox</type>
</CustomField>