force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Minimum_Hours_Flag__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Minimum_Hours_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if the Transaction is for a Minimum Hours payment</description>
    <inlineHelpText>Defines if the Transaction is for a Minimum Hours payment</inlineHelpText>
    <label>Minimum Hours Flag</label>
    <type>Checkbox</type>
</CustomField>