force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Original_Credit_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Original_Credit_Transaction_ID__c</fullName>
    <description>When a Transaction is created via a Re-Invoice process, this field indicates the Record ID of the corresponding Transaction related to the Credit Note</description>
    <inlineHelpText>When a Transaction is created via a Re-Invoice process, this field indicates the Record ID of the corresponding Transaction related to the Credit Note</inlineHelpText>
    <label>Original Credit - Transaction ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>