force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Original_Invoice_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Original_Invoice_Transaction_ID__c</fullName>
    <description>When a Transaction is created via a Credit Note process, this field indicates the Record ID of the corresponding Transaction related to the Original Invoice</description>
    <inlineHelpText>When a Transaction is created via a Credit Note process, this field indicates the Record ID of the corresponding Transaction related to the Original Invoice</inlineHelpText>
    <label>Original Invoice - Transaction ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>