force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Pay_Code_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Pay_Code_Sort_Order__c</fullName>
    <description>The Sort Order applied to the related Pay Code. The sort order controls ordering within Timesheet Manager</description>
    <inlineHelpText>The Sort Order applied to the related Pay Code. The sort order controls ordering within Timesheet Manager</inlineHelpText>
    <label>Pay Code Sort Order</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>