force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Payee_Leave_Rule_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Payee_Leave_Rule_Id__c</fullName>
    <description>Field to populate the id of the payee leave rule for use in interpretation calculations for leave.</description>
    <inlineHelpText>Field to populate the id of the payee leave rule for use in interpretation calculations for leave.</inlineHelpText>
    <label>Payee Leave Rule Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>