force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Purchase_Order_Number__c</fullName>
    <description>The Purchase Order Number that applies to the Pay Transaction</description>
    <inlineHelpText>The Purchase Order Number that applies to the Pay Transaction</inlineHelpText>
    <label>Purchase Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>