force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Quantity_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Quantity_Type__c</fullName>
    <description>Identifies the Quantity Type that applies to the Pay Transaction</description>
    <inlineHelpText>Identifies the Quantity Type that applies to the Pay Transaction</inlineHelpText>
    <label>Quantity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Quantity_Type_Picklists</valueSetName>
    </valueSet>
</CustomField>