force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Record_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Record_Type_Formula__c</fullName>
    <description>Displays the Record Type of the Pay Transaction in read only format for use on summary pages</description>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the Record Type of the Pay Transaction in read only format for use on summary pages</inlineHelpText>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>