force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Source__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Source__c</fullName>
    <description>DO NOT USE</description>
    <formula>&quot;NOT IN USE&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DO NOT USE</inlineHelpText>
    <label>DO NOT USE</label>
    <type>Text</type>
</CustomField>