force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__System_Temp_Value__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__System_Temp_Value__c</fullName>
    <description>Used in code for certain calculations - temporary storage of data only and not to be used unless approved for development</description>
    <inlineHelpText>Used in code for certain calculations - temporary storage of data only and not to be used unless approved for development</inlineHelpText>
    <label>System Temp Value</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>