force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__T2P_Product_Override__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__T2P_Product_Override__c</fullName>
    <description>&quot;Yes&quot; indicates the product triggers have been overridden on this Pay Transaction</description>
    <inlineHelpText>&quot;Yes&quot; indicates the product triggers have been overridden on this Pay Transaction</inlineHelpText>
    <label>Time2pay Product Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>