force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Time_Off_in_Lieu_Accrued__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Time_Off_in_Lieu_Accrued__c</fullName>
    <description>To indicate if the Pay Transaction was accrued as Time Off in Lieu.</description>
    <inlineHelpText>To indicate if the Pay Transaction was accrued as Time Off in Lieu.</inlineHelpText>
    <label>Time Off in Lieu Accrued</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>