force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Timesheet_Activity__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Timesheet_Activity__c</fullName>
    <description>To indicate whether the entry is also considered a specific timesheet activity used during interpretation based on the award.</description>
    <inlineHelpText>To indicate whether the entry is also considered a specific timesheet activity used during interpretation based on the award.</inlineHelpText>
    <label>Timesheet Activity</label>
    <length>18</length>
    <type>Text</type>
</CustomField>