force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Timesheet_Assignment_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Timesheet_Assignment_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Assignment Rate that applies to the Pay Transaction</description>
    <inlineHelpText>Defines the Assignment Rate that applies to the Pay Transaction</inlineHelpText>
    <label>Timesheet Assignment Rate</label>
    <referenceTo>tc9_pr__Assignment_Rate__c</referenceTo>
    <relationshipLabel>Pay Transactions</relationshipLabel>
    <relationshipName>Pay_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>