force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Timesheet_Entry__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Timesheet_Entry__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the Timesheet Entry that applies to the Pay Transaction (if applicable)</description>
    <inlineHelpText>Defines the Timesheet Entry that applies to the Pay Transaction (if applicable)</inlineHelpText>
    <label>Timesheet Entry</label>
    <referenceTo>tc9_et__Timesheet_Entry__c</referenceTo>
    <relationshipLabel>Pay Transactions</relationshipLabel>
    <relationshipName>Pay_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>