force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Timesheet_Manager__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Timesheet_Manager__c</fullName>
    <description>Button to open the Timesheet Manager</description>
    <formula>If (not(isblank(  tc9_et__Timesheet__c  )),  tc9_et__Timesheet__r.tc9_et__Timesheet_Manager__c ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Button to open the Timesheet Manager</inlineHelpText>
    <label>Timesheet Manager</label>
    <type>Text</type>
</CustomField>