force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__To_Be_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__To_Be_Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Pay Transaction should be invoiced. Populated from the associated Assignment Rate.</description>
    <inlineHelpText>Indicates if Pay Transaction should be invoiced. Populated from the associated Assignment Rate.</inlineHelpText>
    <label>To Be Invoiced?</label>
    <type>Checkbox</type>
</CustomField>