force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__Updated_in_Timesheet_Manager__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Updated_in_Timesheet_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a User has updated the Transaction via the Timesheet Manager</description>
    <inlineHelpText>Indicates that a User has updated the Transaction via the Timesheet Manager</inlineHelpText>
    <label>Updated in Timesheet Manager</label>
    <type>Checkbox</type>
</CustomField>