force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__X2cloudnine_Time2Pay_Generated__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__X2cloudnine_Time2Pay_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this pay transaction was created by 2cloudnine Time2Pay</description>
    <inlineHelpText>Indicates that this pay transaction was created by 2cloudnine Time2Pay</inlineHelpText>
    <label>2cloudnine Time2Pay Generated</label>
    <type>Checkbox</type>
</CustomField>