force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_et__X4_Week_Frequency_Overtime_Applied__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__X4_Week_Frequency_Overtime_Applied__c</fullName>
    <description>Defines if the pay transaction frequency overtime was applied during 4 week period frequency calculations.</description>
    <inlineHelpText>Defines if the pay transaction frequency overtime was applied during 4 week period frequency calculations.</inlineHelpText>
    <label>4 Week Frequency Overtime Applied</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>