force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/tc9_pr__Accrual_Quantity_Worked__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Accrual_Quantity_Worked__c</fullName>
    <description>Where the Accrual Type is Units per Hour Worked this field indicates the quantity worked value which was used to calculate the accrual.</description>
    <inlineHelpText>Where the Accrual Type is Units per Hour Worked this field indicates the quantity worked value which was used to calculate the accrual.</inlineHelpText>
    <label>Accrual Quantity Worked</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>